--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,12 @@
         }
     ],
     "require": {
-        "php": "^8.1|^8.2|^8.3",
-        "illuminate/support": "^9.0|^10.0|^11.0|^12.0",
-        "illuminate/database": "^9.0|^10.0|^11.0|^12.0",
-        "illuminate/auth": "^9.0|^10.0|^11.0|^12.0",
-        "illuminate/console": "^9.0|^10.0|^11.0|^12.0",
-        "illuminate/contracts": "^9.0|^10.0|^11.0|^12.0"
+        "php": "^8.2|^8.3",
+        "illuminate/support": "^12.0",
+        "illuminate/database": "^12.0",
+        "illuminate/auth": "^12.0",
+        "illuminate/console": "^12.0",
+        "illuminate/contracts": "^12.0"
     },
     "require-dev": {
         "orchestra/testbench": "^7.0|^8.0|^9.0|^10.0",
